update word-wrap css

--- a/defensive.html
+++ b/defensive.html
@@ -297,7 +297,7 @@ span.entrytext > p {margin-top: 1px;}
 .photo img{width:100%;}
 .index-page .1stphoto img {display: none;}
 .index-page .1stphoto img:first-child {display: block;}
-.entrytext a{word-wrap:break-word;}
+div#entry a{word-wrap:break-word;}
 {CustomCSS}
 
 </style>
