added a new install button

--- a/defensive.html
+++ b/defensive.html
@@ -65,7 +65,7 @@ http://rowrz.tumblr.com/themes
 <meta name="text:link5title" content=""/>
 {/block:hidden}
 
-<script src="http://static.tumblr.com/ojd74qh/8Kwn7c902/jquery.1.11.0.min.defensive.js"></script>
+<script src="http://static.tumblr.com/ojd74qh/QKqn92qi7/jquery.1.11.0.min.defensive.js"></script>
 
 <style type="text/css">
 
@@ -99,7 +99,7 @@ text-decoration:none;
 transition: all 0.7s ease-out;
 }
 
-#tumblr_controls{position:fixed !important;}
+#tumblr_controls{position:fixed !important;right:104px;}
 
 
 #text img, #entry img {
@@ -297,7 +297,6 @@ span.entrytext > p {margin-top: 1px;}
 .photo img{width:100%;}
 .index-page .1stphoto img {display: none;}
 .index-page .1stphoto img:first-child {display: block;}
-div#entry a{word-wrap:break-word;}
 {CustomCSS}
 
 </style>
@@ -556,5 +555,8 @@ $(document).ready(function() {
 {/block:indexpage}
 
 </div>
+
+
+
 </body>
 </html>
