updated word wrap for a & code tags
was taken out in last commit, added with an update in this commit

--- a/defensive.html
+++ b/defensive.html
@@ -181,6 +181,8 @@ font-family:'trebuchet ms', arial, sans-serif;
 background-color:{color:entrybg};
 }
 
+div#entry a,div#entry code{word-wrap:break-word;}
+
 #entry .photo{
    margin-bottom:5px;
    padding-bottom:0px;}
