updated infinite scroll

--- a/defensive.html
+++ b/defensive.html
@@ -516,7 +516,7 @@ span.entrytext > p {margin-top: 1px;}
     {/block:Pagination}
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript" src="http://isotope.metafizzy.co/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="http://static.tumblr.com/4ra4qv5/8N8n57y0s/infinitescroll.min.js"></script>
+<script type="text/javascript" src="http://static.tumblr.com/0xll37k/6QRn49wdh/infinitescroll.js"></script>
 <script type="text/javascript" src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
