--- a/defensive.html
+++ b/defensive.html
@@ -63,6 +63,8 @@ http://rowrz.tumblr.com/themes
 
 <meta name="text:link5" content=""/>
 <meta name="text:link5title" content=""/>
+
+<meta name="text:Google analytics ID" content="">
 {/block:hidden}
 
 <script src="http://static.tumblr.com/ojd74qh/QKqn92qi7/jquery.1.11.0.min.defensive.js"></script>
@@ -180,8 +182,6 @@ line-height:15px;
 font-family:'trebuchet ms', arial, sans-serif;
 background-color:{color:entrybg};
 }
-
-div#entry a,div#entry code{word-wrap:break-word;}
 
 #entry .photo{
    margin-bottom:5px;
@@ -516,7 +516,7 @@ span.entrytext > p {margin-top: 1px;}
     {/block:Pagination}
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script type="text/javascript" src="http://isotope.metafizzy.co/isotope.pkgd.min.js"></script>
-<script type="text/javascript" src="http://static.tumblr.com/0xll37k/6QRn49wdh/infinitescroll.js"></script>
+<script type="text/javascript" src="http://static.tumblr.com/4ra4qv5/8N8n57y0s/infinitescroll.min.js"></script>
 <script type="text/javascript" src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
@@ -558,7 +558,16 @@ $(document).ready(function() {
 
 </div>
 
-
+{block:IfGoogleAnalyticsID}
+            <script>
+              (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+              ga('create', '{text:Google Analytics ID}', 'tumblr.com');
+              ga('send', 'pageview');
+            </script>
+{/block:IfGoogleAnalyticsID}
 
 </body>
 </html>
