fixed link1 missing

--- a/defensive.html
+++ b/defensive.html
@@ -329,6 +329,9 @@ span.entrytext > p {margin-top: 1px;}
                 <a class="nav" href="/ask">msg</a>
             {/block:ifAskLink}
         {/block:AskEnabled}
+        {block:iflink1title}
+            <a class="nav" href="{text:link5}">{text:link5title}</a>
+        {/block:iflink1title}
         {block:iflink2title}
             <a class="nav" href="{text:link2}">{text:link2title}</a>
         {/block:iflink2title}
