custom minimizing of css

--- a/defensive.html
+++ b/defensive.html
@@ -87,31 +87,25 @@ src: url(http://static.tumblr.com/ojd74qh/noSn5fmf6/slkscr.ttf);
  
 -o-transition: all 0.4s ease-in-out;
 
-a {
-text-decoration:none;
+a {text-decoration:none;
 -webkit-transition: all 0.7s ease-out;
 -moz-transition: all 0.7s ease-out;
-transition: all 0.7s ease-out;
-}
+transition: all 0.7s ease-out;}
 
-a:hover {
-text-decoration:none;
+a:hover {text-decoration:none;
 -webkit-transition: all 0.7s ease-out;
 -moz-transition: all 0.7s ease-out;
-transition: all 0.7s ease-out;
-}
+transition: all 0.7s ease-out;}
 
 #tumblr_controls{position:fixed !important;right:104px;}
 
 
-#text img, #entry img {
-    height: auto;
+#text img, #entry img {height: auto;
     max-width:100%;}
 
 .left {margin-left:400px;}
 
-#center{
-padding-top:3px;
+#center{padding-top:3px;
 padding-bottom:3px;
 position:fixed !important;
 width:250px;
@@ -120,12 +114,9 @@ background-color:#fff;
 {block:PermalinkPage}
 width:410px;
 height:207px;
-{/block:PermalinkPage}
-}
+{/block:PermalinkPage}}
 
-#posts{
-
-{block:permalinkpage}
+#posts{{block:permalinkpage}
 width:860px;
 {/block:permalinkpage}
 {block:ifnot2Columns}
@@ -138,41 +129,35 @@ width:860px;
     width:620px;
     {/block:indexpage}
 {/block:if2Columns}
-margin-top: 10px;
-}
+margin-top: 10px;}
 
-body {
-padding: 0px;
+body {padding: 0px;
 margin: 0px;
 color:{color:text};
 line-height:14px;
 font-size:9px;
-background-color: {color:Background};
-}
+background-color: {color:Background};}
 
-a:link, a:active, a:visited{
-text-decoration:none;
+a:link, a:active, a:visited{text-decoration:none;
 color:{color:link};
 -webkit-transition: all 0.3s ease-out;
 -moz-transition: all 0.3s ease-out;
 transition: all 0.3s ease-out;}
 
-a:hover{
-color:{color:linkhover};
+a:hover{color:{color:linkhover};
 text-shadow:0px 0px 20px #fff;
 -webkit-transition: all 0.3s ease-out;
 -moz-transition: all 0.3s ease-out;
-transition: all 0.3s ease-out; 
-}
-#entry blockquote {
-      border-left: solid 2px {color:accents};
+transition: all 0.3s ease-out; }
+
+#entry blockquote {border-left: solid 2px {color:accents};
       margin: 0;
       padding-left: 10px;}
+      
 .text p{text-align:left;}
 .txttitle{font-size:11px;}
 
-#entry {
-margin:16px;
+#entry {margin:16px;
 padding:9px;
 padding-bottom:6px;
 z-index:100;
@@ -180,18 +165,14 @@ line-height:15px;
 {block:IndexPage}width:200px;{/block:IndexPage}
 {block:PermalinkPage}width:400px; margin-left:40px;{/block:PermalinkPage}
 font-family:'trebuchet ms', arial, sans-serif;
-background-color:{color:entrybg};
-}
+background-color:{color:entrybg};}
 
-#entry .photo{
-   margin-bottom:5px;
+#entry .photo{margin-bottom:5px;
    padding-bottom:0px;}
-.perma1, .perma2{
-    margin-top:-10px;
+.perma1, .perma2{margin-top:-10px;
     padding-top:5px;}
 
-.perma1{
-float:left;
+.perma1{float:left;
 height: auto;
 overflow:hidden;
 bottom:0px;
@@ -215,8 +196,7 @@ text-transform: uppercase;
 transition: all 0.8s ease;
 -o-transition: all 0.8s ease;}
 
-.perma1, .perma2, .perm, .perm2{
-    font-family:silkscreen,'courier new',monospace,consolas;
+.perma1, .perma2, .perm, .perm2{font-family:silkscreen,'courier new',monospace,consolas;
     font-size:8px;}
     
 .perm{display: block; 
@@ -299,15 +279,11 @@ span.entrytext > p {margin-top: 1px;}
 .photo img{width:100%;}
 .index-page .1stphoto img {display: none;}
 .index-page .1stphoto img:first-child {display: block;}
-.bubble-question{
-    border-radius:5px;
+.bubble-question{border-radius:5px;
     background-color:#fafafa;
     padding:10px;
-    border:1px solid #eee;
-}
-.answerer{
-    margin-bottom:-5px;
-}
+    border:1px solid #eee;}
+.answerer{margin-bottom:-5px;}
 {CustomCSS}
 
 </style>
