--- a/defensive.html
+++ b/defensive.html
@@ -38,8 +38,10 @@ http://rowrz.tumblr.com/themes
 <meta name="color:accents" content="#eeeeee"/>
 <meta name="color:linkhover" content="#888888"/>
 <meta name="color:entrybg" content="#FFFFFF"/> 
+<meta name="color:borders" content="#000000"/>
 
 <meta name="if:UseAccountAvi" content="1"/>
+<meta name="if:Borders" content="0"/>
 <meta name="image:SideImg" content="{PortraitURL-128}"/>
 <meta name="if:2Columns" content="0"/>
 <meta name="if:showcaptions" content="0"/>
@@ -165,6 +167,9 @@ line-height:15px;
 {block:IndexPage}width:200px;{/block:IndexPage}
 {block:PermalinkPage}width:400px; margin-left:40px;{/block:PermalinkPage}
 font-family:'trebuchet ms', arial, sans-serif;
+{block:ifBorders}
+border:1px solid {color:borders};
+{block:ifBorders}
 background-color:{color:entrybg};}
 
 #entry .photo{margin-bottom:5px;
@@ -232,6 +237,9 @@ text-align:left;
 opacity:1;
 margin-top:100px;
 font-size:8px;
+{block:ifBorders}
+border:1px solid {color:borders};
+{block:ifBorders}
 background-color:{color:entrybg};
 -webkit-transition: all 0.8s linear;
 -moz-transition: all 0.8s linear;
