--- a/austere.html
+++ b/austere.html
@@ -95,17 +95,17 @@ background-color:#fff;
 width:410px;
 height:207px;
 {/block:PermalinkPage}
+margin-left:200px;
 }
 
 #posts{
-float:center;
 {block:indexpage}
 width:710px;
 {/block:indexpage}
 {block:permalinkpage}
 width:860px;
 {/block:permalinkpage}
-margin-left: 14%;
+float:left;
 margin-top: 0px;
 }
 
@@ -253,7 +253,6 @@ z-index:98;
 width:200px;
 height:100%;
 position:fixed; 
-right:15%;
 padding:14px;
 margin-top:-6px;
 font-size:11px;
@@ -266,6 +265,7 @@ opacity:1;
 -webkit-transition: all 0.8s linear;
 -moz-transition: all 0.8s linear;
 transition: all 0.8s linear; 
+margin-left:650px;
 }
 
 .titlelink:hover{
@@ -309,7 +309,7 @@ transition: all 0.3s linear;
 
 <body onkeydown="return false">
 
-<div class="center">
+<div id="center">
 <div class="sidebar">
 <div class="decline1">
 <div class="decline2">
