--- a/ashen.html
+++ b/ashen.html
@@ -983,12 +983,12 @@ color:{color:Text};
 
 </head>
 
-<body onkeydown="return false">
+<body>
 
 <div class="center">
 <div id="sidebar">
 
-<a title="{Title}" href="/">{block:ifsidebarpic}<img class="sidepic" title="{Title}" src="{image:sidebarpic}"/>{/block:ifsidebarpic}</a>
+<a title="{Title}" href="/"><img class="sidepic" title="{Title}" src="{image:sidebarpic}"/></a>
 
 
 <div id="desc">{description}</div>
