--- a/defensive.html
+++ b/defensive.html
@@ -438,8 +438,8 @@ padding:4px;}
 </table>
 {/block:Source}
 {block:IndexPage}
-<div class="perm"><a {block:ifNoFollow}rel="nofollow"{/block:ifNoFollow} href="{Permalink}"><a href="{Permalink}">{notecount}</span></a></div>
-<div class="perm2"><a {block:ifNoFollow}rel="nofollow"{/block:ifNoFollow} href="{ReblogURL}" target="_blank">rblg</a></div>
+<div class="perm"><a href="{Permalink}"><a href="{Permalink}">{notecount}</span></a></div>
+<div class="perm2"><a href="{ReblogURL}" target="_blank">rblg</a></div>
 {/block:IndexPage}
 {/block:Quote}
 
