--- a/defensive.html
+++ b/defensive.html
@@ -299,8 +299,7 @@ div.bubble-answer > p {display: inline;}
     line-height:16px;}
 .quote_source_mdash,.quote_source{vertical-align:text-top;
 font-size:10px;}
-.quote_source{margin:0;
-padding:4px;}
+.quote_source{margin:0;}
 {CustomCSS}
 
 </style>
