--- a/defensive.html
+++ b/defensive.html
@@ -74,14 +74,11 @@ http://rowrz.tumblr.com/themes
 <style type="text/css">
 
 @font-face
-{
-font-family: silkscreen;
-src: url(http://static.tumblr.com/ojd74qh/noSn5fmf6/slkscr.ttf);
-}
+{font-family: silkscreen;
+src: url(http://static.tumblr.com/ojd74qh/noSn5fmf6/slkscr.ttf);}
 
- ::-webkit-scrollbar {width: 9px; height: 3px; background: #FFFFFF;}
+::-webkit-scrollbar {width: 9px; height: 3px; background: #FFFFFF;}
 ::-webkit-scrollbar-thumb {background-color:#ffffff ; border: 1px solid black;}
- 
  
 -webkit-transition: all 0.4s ease-in-out;
  
@@ -90,14 +87,23 @@ src: url(http://static.tumblr.com/ojd74qh/noSn5fmf6/slkscr.ttf);
 -o-transition: all 0.4s ease-in-out;
 
 a {text-decoration:none;
--webkit-transition: all 0.7s ease-out;
--moz-transition: all 0.7s ease-out;
-transition: all 0.7s ease-out;}
+-webkit-transition: all 0.3s ease-out;
+-moz-transition: all 0.3s ease-out;
+transition: all 0.3s ease-out;
+word-wrap: break-word;}
 
-a:hover {text-decoration:none;
--webkit-transition: all 0.7s ease-out;
--moz-transition: all 0.7s ease-out;
-transition: all 0.7s ease-out;}
+a:link, a:active, a:visited{text-decoration:none;
+color:{color:link};
+-webkit-transition: all 0.3s ease-out;
+-moz-transition: all 0.3s ease-out;
+transition: all 0.3s ease-out;}
+
+a:hover{text-decoration:none;
+color:{color:linkhover};
+text-shadow:0px 0px 20px #fff;
+-webkit-transition: all 0.3s ease-out;
+-moz-transition: all 0.3s ease-out;
+transition: all 0.3s ease-out; }
 
 #tumblr_controls{position:fixed !important;right:104px;}
 
@@ -139,18 +145,6 @@ color:{color:text};
 line-height:14px;
 font-size:9px;
 background-color: {color:Background};}
-
-a:link, a:active, a:visited{text-decoration:none;
-color:{color:link};
--webkit-transition: all 0.3s ease-out;
--moz-transition: all 0.3s ease-out;
-transition: all 0.3s ease-out;}
-
-a:hover{color:{color:linkhover};
-text-shadow:0px 0px 20px #fff;
--webkit-transition: all 0.3s ease-out;
--moz-transition: all 0.3s ease-out;
-transition: all 0.3s ease-out; }
 
 #entry blockquote {border-left: solid 2px {color:accents};
       margin: 0;
