--- a/defensive.html
+++ b/defensive.html
@@ -89,8 +89,8 @@ src: url(http://static.tumblr.com/ojd74qh/noSn5fmf6/slkscr.ttf);}
 a {text-decoration:none;
 -webkit-transition: all 0.3s ease-out;
 -moz-transition: all 0.3s ease-out;
-transition: all 0.3s ease-out;
-word-wrap: break-word;}
+transition: all 0.3s ease-out;}
+a{word-wrap: break-word;}
 
 a:link, a:active, a:visited{text-decoration:none;
 color:{color:link};
