--- a/defensive.html
+++ b/defensive.html
@@ -137,7 +137,11 @@ width:860px;
     width:620px;
     {/block:indexpage}
 {/block:if2Columns}
-margin-top: 10px;}
+margin-top: 10px;
+{block:ifnot2Columns}
+margin-left:50px;
+{/block:ifnot2Columns}
+}
 
 body {padding: 0px;
 margin: 0px;
