--- a/defensive.html
+++ b/defensive.html
@@ -136,13 +136,11 @@ width:860px;
     width:420px;
     {/block:indexpage}
 {/block:ifnot2Columns}
-{block:ifnotInfiniteScroll}
-    {block:if2Columns}
-        {block:indexpage}
+{block:if2Columns}
+    {block:indexpage}
         width:620px;
-        {/block:indexpage}
-    {/block:if2Columns}
-{/block:ifnotInfiniteScroll}
+    {/block:indexpage}
+{/block:if2Columns}
 margin-top: 10px;
 }
 
@@ -671,5 +669,16 @@ font-size:10px;}
               ga('send', 'pageview');
             </script>
 {/block:IfGoogleAnalyticsID}
+<div style="position:fixed;right:10px;bottom:10px;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- rowrz ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:160px;height:600px"
+     data-ad-client="ca-pub-8274890393266297"
+     data-ad-slot="4690869163"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 </body>
 </html>
