--- a/defensive.html
+++ b/defensive.html
@@ -638,7 +638,8 @@ font-size:10px;}
                 navSelector  : '#pagination', 
                 nextSelector : '#pagination a', 
                 itemSelector : '#entry',
-                bufferPx     : 1000,
+                bufferPx : 100,
+                extraScrollPx: 1200,
                 loading: {
                     finishedMsg: '',
                 }
