--- a/defensive.html
+++ b/defensive.html
@@ -230,7 +230,7 @@ line-height:15px;
 overflow:hidden;
 text-align:left;
 opacity:1;
-font-size:8px;
+font-size:{text:descfontsize};
 z-index:98;
 -webkit-transition: all 0.8s linear;
 -moz-transition: all 0.8s linear;
