--- a/defensive.html
+++ b/defensive.html
@@ -229,7 +229,7 @@ line-height:15px;
 overflow:hidden;
 text-align:left;
 opacity:1;
-font-size:{text:descfontsize};
+font-size:{text:sidefontsize};
 z-index:98;
 -webkit-transition: all 0.8s linear;
 -moz-transition: all 0.8s linear;
