--- a/defensive.html
+++ b/defensive.html
@@ -52,7 +52,7 @@ http://rowrz.tumblr.com/themes
 <meta name="if:2Columns" content="{block:ifnotInfiniteScroll}0{/block:ifnotInfiniteScroll}"/>
 
 
-<meta name="text:descfontsize" content="9px"/>
+<meta name="text:sidefontsize" content="9px"/>
 
 <meta name="text:link1" content=""/>
 <meta name="text:link1title" content=""/>
