--- a/austere.html
+++ b/austere.html
@@ -87,7 +87,6 @@ position:fixed !important;
 #center{
 padding-top:3px;
 padding-bottom:3px;
-position:fixed !important;
 width:250px;
 height:207px;
 background-color:#fff;
@@ -99,6 +98,7 @@ margin-left:200px;
 }
 
 #posts{
+        position:relative;
 {block:indexpage}
 width:710px;
 {/block:indexpage}
@@ -145,6 +145,7 @@ transition: all 0.3s ease-out;
     text-align:left;
 }
 #entry {
+    position:relative;
 margin:16px;
 float:left;
 padding:9px;
