color control for answer bubbles

--- a/defensive.html
+++ b/defensive.html
@@ -40,6 +40,7 @@ http://rowrz.tumblr.com/themes
 <meta name="color:EntryBG" content="#FFFFFF"/> 
 <meta name="color:Borders" content="#000000"/>
 <meta name="color:Pagination" content="#FFFFFF"/>
+<meta name="color:Answers" content="#fafafa">
 
 <meta name="if:UseAccountAvi" content="1"/>
 <meta name="if:Borders" content="0"/>
@@ -290,13 +291,13 @@ span.entrytext > p {margin-top: 1px;}
 .index-page .1stphoto img {display: none;}
 .index-page .1stphoto img:first-child {display: block;}
 .bubble-question{border-radius:5px;
-    background-color:#fafafa;
+    background-color:{color:Answers};
     padding:10px;
     border:1px solid #eee;}
 .answerer{margin-bottom:-5px;}
 div.bubble-answer > p {display: inline;}
 .bubble-answer{border-radius:5px;
-    background-color:#fafafa;
+    background-color:{color:Answers};
     padding:10px;
     border:1px solid #eee;}
 .quote-title{font-size:14px;
