--- a/austere.html
+++ b/austere.html
@@ -282,12 +282,12 @@ transition: all 0.3s linear;
 .decline1 {
     height:100px;
     padding:5px;
-    border-left: 2px solid #000;
+    border-left: 2px solid {color:text};
 }
 .decline2 {
     height:100px;
     padding:5px;
-    border-left: 2px solid #000;
+    border-left: 2px solid {color:text};
 }
 .avatar {
     display:none;
