--- a/defensive.html
+++ b/defensive.html
@@ -633,15 +633,15 @@ font-size:10px;}
                     var $container = $('#posts');
                     $container.imagesLoaded(function(){
                         $container.masonry({
-                        itemSelector: '#entry, #fixed',
+                        itemSelector: '#entry',
                     });
                 });
                 $container.infinitescroll({
-                    itemSelector : "#entry, #fixed",
+                    itemSelector : "#entry",
                     navSelector  : '#pagination', 
                     nextSelector : '#pagination a', 
                     loadingImg : "",
-                    loadingText : "loading",
+                    loadingText : "",
                     bufferPx : 10000,
                     extraScrollPx: 12000,
                 },
